[package]
name = "logic_renet_demo"
version = "0.1.0"
edition = "2021"
default-run = "client"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8", features = ["dynamic", "filesystem_watcher"] }
bevy-inspector-egui = "0.13.0"
serde = { version = "1.0", features = [ "derive" ] } 
local-ip-address = "0.4.8"
bincode = "1.3.1"
bevy_renet = "0.0.5"
renet_visualizer = "0.0.2"
lz4 = "1.24.0"
