[package]
name = "logic_renet_demo"
version = "0.1.0"
edition = "2021"
default-run = "client"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8"}
serde = { version = "1.0", features = [ "derive" ] } 
bincode = "1.3.1"
local-ip-address = "0.4.8"

# For port forwarded servers
public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }

bevy_renet = "0.0.5"